# oxiflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build-linux.yml  rust-build-mac.yml  rust-build-macos-arm.yml  rust-build-macos-intel.yml  rust-build-release.yml  rust-build-test.yml  rust-build-windows.yml  rust-mac.yml  rust-release-test.yml  rust-tests.yml  rust.yml
src/: components.rs  http.rs  lib.rs  main.rs  progress.rs  worker.rs
src/components/: cli.rs  file_processor.rs  http.rs  progressbar.rs  report.rs  worker.rs
src/components/http/: client.rs  error.rs  response.rs
src/components/report/: csv.rs  output.rs  txt.rs
src/components/worker/: http.rs  request.rs  result.rs
src/components/worker/http/: client.rs  error.rs  response.rs
src/components/worker/result/: single.rs  totals.rs
src/http/: client.rs  error.rs  response.rs
src/worker/: http.rs  http_worker.rs  result.rs
tests/: urls.txt  worker_test.rs
tests/express-test-server/: README.md  package-lock.json  package.json
tests/express-test-server/src/: common.ts  index.ts
tests/express-test-server/src/routes/: code.ts  delay.ts  random.ts
