[package]
name = "oxiflow"
version = "0.1.3"
edition = "2021"
description = "Minimal HTTP loadtester with concurrency"
license = "GPL-3.0"
repository = "https://github.com/artemoliynyk/oxiflow/"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.1"